--- a/package.json
+++ b/package.json
@@ -5,22 +5,23 @@
   "type": "module",
   "homepage": "https://davidudecodes.github.io/rcm-help",
   "scripts": {
-  "dev": "vite",
-  "build": "vite build",
-  "lint": "eslint .",
-  "preview": "vite preview",
-  "predeploy": "npm run build",
-  "deploy": "gh-pages -d dist",
-  
-  "publish": "git add . && git commit -m \"Auto publish\" && git push origin main && npm run deploy"
-  } ,
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint .",
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
+    "publish": "git add . && git commit -m \"Auto publish\" && git push origin main && npm run deploy"
+  },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.3",
+    "@tonejs/piano": "^0.2.1",
     "react": "^19.0.0",
     "react-dial-knob": "^1.3.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.0",
-    "tailwindcss": "^4.1.3"
+    "tailwindcss": "^4.1.3",
+    "tone": "^15.1.22"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
